--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.3.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
     "gulp-sass": "^2.1.0",
+    "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4"
   },
   "repository": {
