--- a/_data/services.yml
+++ b/_data/services.yml
@@ -14,6 +14,6 @@
       sprite: xd
       text: There have been far too many times where I've been trying to accomplish a simple task on a website, and ended up wanting to throw my computer out the window in frustration. Needless to say, user experience is an aspect of software I believe is vital to a successful product.
 
-    - heading: Inclusivity in Tech
+    - heading: Diversity in Tech
       sprite: wit
-      text: Coding and designing aside, I am a strong advocate for diversifying the tech industry, especially for women. I currently lead Northeastern Women in Tech, and was a 2016 <a href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference</a> Scholar.
+      text: Beyond coding, I am a strong advocate for diversity in the tech industry, especially for women. I currently serve as President for Northeastern's women in tech club, <a href="http://nuwit.ccs.neu.edu/" target="_blank">NUWIT</a>, and was a 2016 <a href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference</a> Scholar.
