fix typo and update resume

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -43,7 +43,7 @@
 - position: Developer
   company: Scout Studio
   url: http://www.northeastern.edu/scout/
-  description: Worked with a small team of designers within Northeastern University's student-led design studio.
+  description: Collaborated with a small team of student designers to spearhead a new design system for Scout’s first annual student-led design conference at Northeastern. Worked closely with designers and management team to develop, document, and manage the conference’s marketing website using Jekyll, Sass, and JavaScript.
   sprite: university
   date: Jan 2017 - Present
 
