--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 - company: Apple
   url: https://www.apple.com/music/
-  time: July 2017 - Present
+  time: July - Dec 2017
   position: UI Engineer Co-op
 
 - company: Scout
