Apple Music instead of just Apple

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- company: Apple
+- company: Apple Music
   url: https://www.apple.com/music/
   time: July - Dec 2017
   position: UI Engineer Co-op
