--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,3 +1,13 @@
+- company: Upstatement
+  url: https://www.upstatement.com/
+  time: May 2018 - Present
+  position: Engineer
+
+- company: Scout
+  url: https://web.northeastern.edu/scout/
+  time: Jan - June 2018
+  position: Studio Developer
+
 - company: Apple Music
   url: https://www.apple.com/music/
   time: July - Dec 2017
