--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "devDependencies": {
     "@nuscout/eslint-config": "^0.2.1",
     "browser-sync": "^2.26.7",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
-    "gulp-clean-css": "3.10.0",
-    "gulp-eslint": "6.0.0",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "6.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "3.0.2"
